prod/external-servers/pve-2/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-2-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve-2.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: pve-2
          port: 8006
          scheme: https
          serversTransport: pve-2-insecure-transport
  tls:
    secretName: pve-2-certificate-secret
